	Changed date terminator to accept many more characters (not just
	whitespace.  Fixing: https://rt.cpan.org/Ticket/Display.html?id=87828

	Added "Sept" as an abbr for September.
	Fixing: https://rt.cpan.org/Ticket/Display.html?id=87451
2013.0912:
        Pulled fix from Adam Schobelock that removes timezone offset
	caching because it was creating incorrect behavor or Moscow.
2011.0517:
	Bugfix from Sophie Hamilton: call tzset() when changing timezones.

	Bugfix: bail out of tests cleanly when tzset doesn't work.
2011.0505:
	Bugfix: make sure $ampm is defined so no undefined string warnings
	are issued.

	Honor the GMT flag when parsing time specs.  Patch from
	kris at shannon.id.au.

	Bugfix: RT#31477 noon & midnight would match in the middle of strings.

	Added %v conversion for Time::CTime

	Added tests to disprove invalid bug reports.
2006.0814:
	A bugfix for negative offsets that overflowed (from Vernon Lyon 
	<vlyon at uk.yahoo-inc.com>)

	Add a few more timezones (from Peter Ludemann <ludemann at yahoo-inc.com>
	and Alex Bowley <kilinrax at cpan.org>)

	Recognize fractional times counts like "1.5 minutes ago" 
	(from Simon Wistow <simon@thegestalt.org>)

	Recognize Dow "before last" (from Ole Craig <ocraig at stillsecure.com>)

	Change various __DATA__ to __END__ (from Nick Ing-Simmons 
	<nick at ing-simmons.net>)
2003.1125:
	Various folks have complained that JulianDay isn't correct.  An
	errata section has been added to the documentation.

	Mark Ivey <mivey@r2tech.com> add '@' as a synonym for 'at'.
	Fixed typos.  

	Bryan Henderson <bryanh@giraffe-data.com> sent in a patch to
	allow NOW => 0 so that ParseDate can be used to parse relative
	times. 

	ewan@baremetal.com sent in a patch adding a bit of ISO 8601
	support.

	David Alban <david@responsible.com> doesn't like allowing the
	hour 24:00.  I agree.  Gone if you have VALIDATE=>1.

	Still to be done: the support the large number of ISO 8601 
	date formats: http://hydracen.com/dx/iso8601.htm
2003.0211: